+ Fix tr border on safari

--- a/assets/main.css
+++ b/assets/main.css
@@ -26,6 +26,15 @@ tr:hover:after {
   border-color: #0F43F9;
 }
 
+tr {
+  @apply border border-transparent duration-300;
+  border-bottom-color: #0F43F930;
+}
+
+tr:hover {
+  @apply border;
+  border-color: #0F43F930;
+}
 
 .notification {
   @apply fixed bottom-6 right-6 left-6 md:left-auto;
@@ -73,6 +82,7 @@ tr:hover:after {
 .has-remove .remove {
   @apply hidden absolute -top-2 -right-2 bg-red-500 rounded-full p-0.5 cursor-pointer duration-300;
 }
+
 .has-remove:hover .remove {
   @apply block;
 }
